<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.AccountActivity.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <rm.com.clocks.ClockImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            android:contentDescription=""
            android:src="@mipmap/ic_launcher"
            app:clockColor="@android:color/black"
            app:frameWidth="regular"
            app:hours="12"
            app:indeterminateSpeed="0.001"
            app:minutes="20"
            app:pointerWidth="thin"
            app:timeSetDuration="400"
            tools:ignore="ContentDescription" />


        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/password"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/password"
            android:layout_marginBottom="20dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />


        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/password"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/password"
            android:layout_marginBottom="10dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_reset_password"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_border"
            android:text="@string/btn_login"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/cardview_dark_background" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="Not a member? Signup now!"
            android:textAllCaps="false"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15dp"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="162dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>